docs updates
